# trax

./: .gitmodules  CMakeLists.txt  Makefile  README.md  trax-view.sh
src/: ArrayBoard.cpp  ArrayBoard.h  Exceptions.h  Host.cpp  Host.h  IBoard.cpp  IBoard.h  IPlayer.h  Player.cpp  Player.h  Structs.cpp  Structs.h  main.cpp  main.go
src/Board/: ArrayBoard.cpp  ArrayBoard.h  IBoard.cpp  IBoard.h
src/Player/: IPlayer.h  Player.cpp  Player.h
src/Structs/: Exceptions.h  Structs.h
testdata/: errordata1.txt  errordata2.txt  errordata3.txt  errordata4.txt  rline1.txt  rline2.txt  rloop1.txt  rloop2.txt  wline1.txt  wline2.txt  wloop1.txt
